--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <body>
     <h1>Hello, world!</h1>
 
+<script async src="https://cse.google.com/cse.js?cx=014391522214403407077:bsey-jltkva"></script>
+<div class="gcse-search"></div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
