--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         .staticrypt-page {
-            width: 100%px;
+            width: 400px;
             padding: 8% 0 0;
             margin: 0 auto 100px;
             box-sizing: border-box;
