--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         .staticrypt-page {
-            width: 400px;
+            width: 600px;
             padding: 8% 0 0;
             margin: 0 auto 100px;
             box-sizing: border-box;
@@ -112,7 +112,7 @@
     </style>
 </head>
 
-<body class="staticrypt-body">
+<body class="staticrypt-body"><br/><br/>
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         
