--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </style>
 </head>
 
-<body class="staticrypt-body"><br/><br/>
+<body class="staticrypt-body"><br/><br/><br/><br/>
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         
